# avalon-bonsai

./: CLAUDE.md  README.md  dune-workspace.oxcaml-pkg.example  flake.nix  package-defs.json
.github/workflows/: ci.yml  flakehub-publish-rolling.yml  nix.yml
docs/: dune-package-management.md
firebase/: app.ml  app.mli  auth.ml  auth.mli  dune  error.ml  error.mli  firebase.ml  firebase.mli  firestore.ml  firestore.mli  internal.ml  internal.mli
firebase/shim/: build.sh  entry.mjs
nix/: opam-nix-batch-opam2json.patch
scripts/: update-package-defs-lock.sh  update-package-defs.sh
src/: api.ml  api.mli  email_auth.ml  email_auth.mli  ffi.ml  ffi.mli  parse.ml  state.ml  state.mli  style.ml  style.mli  view.ml
src/components/: achievements.ml  actions.ml  game_board.ml  lobby.ml  login.ml  missions.ml  modals.ml  player_list.ml  role_list.ml  stats.ml  summary_table.ml  toolbar.ml  ui.ml  ui.mli  view.ml
src/core/: analysis.ml  analysis.mli  game.ml  game.mli  types.ml  types.mli
temporal/: dune
temporal/shim/: .babelrc.json  build.sh  entry.mjs  package-lock.json  package.json
test/: fixtures.ml  fixtures.mli  test_analysis.ml  test_game.ml
tests/e2e/: README.md  play.cjs  serve.cjs
web/: index.html
