(library
 (name firebase)
 ; Deliberately Core-free: these are thin JS bindings, and staying on Stdlib keeps the
 ; module namespace clean (Core would shadow this library's Error module).
 (libraries js_of_ocaml)
 (flags
  (:standard -w +70 -warn-error +70))
 ; Embed the vendored Firebase SDK bundle (built from shim/ to vendor/firebase-shim.js)
 ; directly into any js_of_ocaml executable that links this library, exactly like the
 ; bonsai_web_components bindings ship their JS. The bundle runs at startup and exposes the
 ; SDK on globalThis.__fb — no gstatic CDN, no runtime import(). Rebuild: see shim/README.md.
 (js_of_ocaml
  (javascript_files vendor/firebase-shim.js)))
